--- a/blog-system/build.gradle
+++ b/blog-system/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
-//	compile("com.h2database:h2")
+	compile("com.h2database:h2")
 
 	// sql basis
 	compile('mysql:mysql-connector-java:6.0.5')
