--- a/file-server/build.gradle
+++ b/file-server/build.gradle
@@ -4,18 +4,20 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
-		maven { url "https://repo.spring.io/snapshot" }
-		maven { url "https://repo.spring.io/milestone" }
+		maven { url = 'https://repo.spring.io/snapshot' }
+		maven { url = 'https://repo.spring.io/milestone' }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
 }
 
+
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+
 
 group = 'xinyuangui.blog'
 version = '0.0.1-SNAPSHOT'
@@ -23,12 +25,13 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
-	maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }
+	maven { url = 'https://repo.spring.io/snapshot' }
+	maven { url = 'https://repo.spring.io/milestone' }
 }
 
 
 dependencies {
+	compile('cz.jirutka.spring:embedmongo-spring:1.3.1')
 	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
